--- a/sysutils/pfSense-pkg-Shellcmd/Makefile
+++ b/sysutils/pfSense-pkg-Shellcmd/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	pfSense-pkg-Shellcmd
 PORTVERSION=	1.0.3
+PORTREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
