--- a/sysutils/pfSense-repo/Makefile
+++ b/sysutils/pfSense-repo/Makefile
@@ -24,7 +24,8 @@ DATADIR=	${PREFIX}/share/pfSense
 
 .include <bsd.port.pre.mk>
 
-PFSENSE_REPOS?=	pfSense-repo pfSense-repo-devel pfSense-repo-next
+PFSENSE_REPOS?=	pfSense-repo pfSense-repo-devel pfSense-repo-next \
+		pfSense-repo-23
 PFSENSE_REPOS_${ARCH}?=	${PFSENSE_REPOS}
 TMP_PLIST_FILES=${PFSENSE_REPOS_${ARCH}:C/$/.conf/} \
 		${PFSENSE_REPOS_${ARCH}:C/$/.descr/} \
