--- a/sysutils/pfSense-repo/files/pfSense-repo-devel.conf
+++ b/sysutils/pfSense-repo/files/pfSense-repo-devel.conf
@@ -9,7 +9,7 @@ FreeBSD: { enabled: no }
 }
 
 %%PRODUCT_NAME%%: {
-  url: "%%PKG_REPO_SERVER_DEVEL%%/%%PRODUCT_NAME%%_%%PKG_REPO_BRANCH_DEVEL%%_%%ARCH%%-%%POUDRIERE_PORTS_NAME%%",
+  url: "%%PKG_REPO_SERVER_DEVEL%%/%%PRODUCT_NAME%%_%%PKG_REPO_BRANCH_DEVEL%%_%%ARCH%%-%%PRODUCT_NAME%%_%%PKG_REPO_BRANCH_DEVEL%%",
   mirror_type: "srv",
   signature_type: "fingerprints",
   fingerprints: "/usr/local/share/%%PRODUCT_NAME%%/keys/pkg",
