--- a/sysutils/pfSense-repo/files/pkg-install.in
+++ b/sysutils/pfSense-repo/files/pkg-install.in
@@ -9,15 +9,10 @@ if [ -f /etc/make.conf ] && grep -q 'POUDRIERE_PORTS_NAME=' /etc/make.conf; then
 	exit 0
 fi
 
-if [ -f %%DATADIR%%/pkg/repos/%%PRODUCT_NAME%%-repo-23.conf ]; then
-	DEFAULT_REPO=%%DATADIR%%/pkg/repos/%%PRODUCT_NAME%%-repo-23.conf
-else
-	DEFAULT_REPO=%%DATADIR%%/pkg/repos/%%PRODUCT_NAME%%-repo.conf
-fi
 REPO_PATH=/usr/local/etc/pkg/repos
 REPO_CONF=${REPO_PATH}/%%PRODUCT_NAME%%.conf
 
-if [ ! -f "${DEFAULT_REPO}" ]; then
+if [ ! -f "%%DEFAULT_REPO%%" ]; then
 	echo "===> ERROR: Default repo conf not found!"
 	exit 1
 fi
@@ -27,7 +22,7 @@ if [ ! -L "${REPO_CONF}" ]; then
 		rm -f ${REPO_CONF}
 	fi
 	mkdir -p ${REPO_PATH}
-	ln -sf ${DEFAULT_REPO} ${REPO_CONF}
+	ln -sf %%DEFAULT_REPO%% ${REPO_CONF}
 fi
 
 PKG_CONF="/usr/local/etc/pkg.conf"
