Update the radvd port to 2.17.

--- a/net/radvd/Makefile
+++ b/net/radvd/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	radvd
-PORTVERSION=	1.9.1
+PORTVERSION=	2.17
 CATEGORIES=	net ipv6
 MASTER_SITES=	http://www.litech.org/radvd/dist/
 
@@ -24,7 +24,7 @@ USE_RC_SUBR=	radvd
 PORTDOCS=	CHANGES COPYRIGHT INTRO.html README TODO
 
 post-install:
-	${INSTALL_DATA} ${WRKSRC}/radvd.conf.example ${STAGEDIR}${PREFIX}/etc
+	${INSTALL_DATA} ${WRKSRC}/radvd.conf.example ${STAGEDIR}${PREFIX}/etc/radvd.conf.sample
 	${INSTALL} -d ${STAGEDIR}${DOCSDIR}
 	${INSTALL_DATA} ${PORTDOCS:S.^.${WRKSRC}/.} ${STAGEDIR}${DOCSDIR}
 
