pfSense-pkg-zabbix: Fix a bug in Zabbix Proxy / Active Checks
When SNMPTrapper is disabled, it is preventing Zabbix Proxy to listen
Active Checks from agents.

Also introduce new fields in web config, ListenIP and ListenPort.

While here, improve pkg-descr from Agent/Proxy and bump version.

--- a/net-mgmt/pfSense-pkg-zabbix-agent/Makefile
+++ b/net-mgmt/pfSense-pkg-zabbix-agent/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME?=	pfSense-pkg-zabbix-agent
-PORTVERSION=	1.0.0
+PORTVERSION=	1.0.1
 CATEGORIES=	net-mgmt
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -25,7 +25,7 @@ SUB_FILES=	pkg-install pkg-deinstall
 SUB_LIST=	PORTNAME=${PORTNAME}
 
 ZABBIXINTERNALNAME?=	zabbix-agent
-ZABBIXTITLE?=	Zabbix Agent LTS
+ZABBIXTITLE?=	Zabbix Agent 3.0
 
 # Same for all Zabbix Agent ports to share their configs
 # zabbixagentlts for keep compatibility with current configs
