Make sure /etc/ssh exists

--- a/sysutils/pfSense-azure/Makefile
+++ b/sysutils/pfSense-azure/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	pfSense-azure
 PORTVERSION=	0.12
+PORTREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -23,6 +24,7 @@ do-extract:
 	${MKDIR} ${WRKSRC}
 
 do-install:
+	${MKDIR} ${STAGEDIR}/etc/ssh
 	${MKDIR} ${STAGEDIR}${PREFIX}/etc/rc.d
 	${MKDIR} ${STAGEDIR}${PREFIX}/sbin
 	${INSTALL_SCRIPT} ${FILESDIR}${PREFIX}/sbin/*-pfsense-* \
