--- a/sysutils/pfSense-azure/files/usr/local/etc/waagent.conf
+++ b/sysutils/pfSense-azure/files/usr/local/etc/waagent.conf
@@ -1,46 +1,128 @@
 #
-# Windows Azure Linux Agent Configuration
+# Microsoft Azure Linux Agent Configuration
 #
 
-# Specified program is invoked with the argument "Ready" when we report ready status
-# to the endpoint server.
-Role.StateConsumer=None
-
-# Specified program is invoked with XML file argument specifying role configuration.
-Role.ConfigurationConsumer=None
-
-# Specified program is invoked with XML file argument specifying role topology.
-Role.TopologyConsumer=None
-
+# Enable instance creation
 Provisioning.Enabled=y
+
+# Enable extension handling. Do not disable this unless you do not need password reset,
+# backup, monitoring, or any extension handling whatsoever.
+Extensions.Enabled=y
+
+# Rely on cloud-init to provision
+Provisioning.UseCloudInit=n
+
 # Password authentication for root account will be unavailable.
 Provisioning.DeleteRootPassword=n
+
 # Generate fresh host key pair.
 Provisioning.RegenerateSshHostKeyPair=n
-# Supported values are "rsa", "dsa" and "ecdsa".
+
+# Supported values are "rsa", "dsa", "ecdsa", "ed25519", and "auto".
+# The "auto" option is supported on OpenSSH 5.9 (2011) and later.
 Provisioning.SshHostKeyPairType=rsa
+
 # Monitor host name changes and publish changes via DHCP requests.
 Provisioning.MonitorHostName=y
 
+# Decode CustomData from Base64.
+Provisioning.DecodeCustomData=n
+
+# Execute CustomData after provisioning.
+Provisioning.ExecuteCustomData=n
+
+# Algorithm used by crypt when generating password hash.
+#Provisioning.PasswordCryptId=6
+
+# Length of random salt used when generating password hash.
+#Provisioning.PasswordCryptSaltLength=10
+
 # Format if unformatted. If 'n', resource disk will not be mounted.
 ResourceDisk.Format=y
+
+# File system on the resource disk
+# Typically ext3 or ext4. FreeBSD images should use 'ufs' here.
 ResourceDisk.Filesystem=ufs
+
+# Mount point for the resource disk
 ResourceDisk.MountPoint=/mnt/resource
+
 # Create and use swapfile on resource disk.
 ResourceDisk.EnableSwap=n
+
 # Size of the swapfile.
-ResourceDisk.SwapSizeMB=0
+ResourceDisk.SwapSizeMB=2048
 
-# Respond to load balancer probes if requested by Windows Azure.
-LBProbeResponder=y
+# Comma-seperated list of mount options. See man(8) for valid options.
+ResourceDisk.MountOptions=None
 
-# Enable verbose logs
+# Enable verbose logging (y|n)
 Logs.Verbose=n
+
+# Enable Console logging, default is y
+# Logs.Console=y
+
+# Is FIPS enabled
+OS.EnableFIPS=n
 
 # Root device timeout in seconds.
 OS.RootDeviceScsiTimeout=300
+
 # If "None", the system default version is used.
 OS.OpensslPath=None
 
-# Disable auto update
+# Set the path to SSH keys and configuration files
+OS.SshDir=/etc/ssh
+
+OS.PasswordPath=/etc/master.passwd
+
+OS.SudoersDir=/usr/local/etc/sudoers.d
+
+# If set, agent will use proxy server to access internet
+#HttpProxy.Host=None
+#HttpProxy.Port=None
+
+# Detect Scvmm environment, default is n
+# DetectScvmmEnv=n
+
+#
+# Lib.Dir=/var/lib/waagent
+
+#
+# DVD.MountPoint=/mnt/cdrom/secure
+
+#
+# Pid.File=/var/run/waagent.pid
+
+#
+# Extension.LogDir=/var/log/azure
+
+#
+# Home.Dir=/home
+
+# Enable RDMA management and set up, should only be used in HPC images
+# OS.EnableRDMA=y
+
+# Enable or disable goal state processing auto-update, default is enabled
 AutoUpdate.Enabled=n
+
+# Determine the update family, this should not be changed
+# AutoUpdate.GAFamily=Prod
+
+# Determine if the overprovisioning feature is enabled. If yes, hold extension
+# handling until inVMArtifactsProfile.OnHold is false.
+# Default is enabled
+# EnableOverProvisioning=y
+
+# Allow fallback to HTTP if HTTPS is unavailable
+# Note: Allowing HTTP (vs. HTTPS) may cause security risks
+# OS.AllowHTTP=n
+
+# Add firewall rules to protect access to Azure host node services
+OS.EnableFirewall=n
+
+# Enforce control groups limits on the agent and extensions
+CGroups.EnforceLimits=n
+
+# CGroups which are excluded from limits, comma separated
+CGroups.Excluded=customscript,runcommand
