--- a/x11-servers/xwayland-devel/Makefile
+++ b/x11-servers/xwayland-devel/Makefile
@@ -2,8 +2,8 @@
 
 PORTNAME=	xwayland
 DISTVERSIONPREFIX=	xorg-server-
-DISTVERSION=	1.20.0-805
-DISTVERSIONSUFFIX=	-g365cbbfc4
+DISTVERSION=	1.20.0-811
+DISTVERSIONSUFFIX=	-gf08ab719d
 CATEGORIES=	x11-servers
 PKGNAMESUFFIX=	-devel
 
