--- a/graphics/drm-current-kmod/Makefile
+++ b/graphics/drm-current-kmod/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	drm-current-kmod
-PORTVERSION=	5.4.62.g20201109
-PORTREVISION=	1
+PORTVERSION=	5.4.92.g20210128
 CATEGORIES=	graphics kld
 
 MAINTAINER=	x11@FreeBSD.org
@@ -17,11 +16,7 @@ ONLY_FOR_ARCHS_REASON=	the new KMS components are only supported on amd64, i386,
 
 RUN_DEPENDS=	gpu-firmware-kmod>=g20200914:graphics/gpu-firmware-kmod
 
-CONFLICTS_INSTALL=	drm-devel-kmod \
-			drm-fbsd11.2-kmod \
-			drm-fbsd12.0-kmod \
-			drm-fbsd13-kmod \
-			drm-legacy-kmod
+CONFLICTS_INSTALL=	drm-devel-kmod
 
 OPTIONS_DEFINE=	DEBUG SOURCE
 
@@ -36,11 +31,11 @@ USES=		kmod uidfix compiler:c++11-lang
 USE_GITHUB=	yes
 GH_ACCOUNT=	freebsd
 GH_PROJECT=	drm-kmod
-GH_TAGNAME=	drm_v5.4.62_4
+GH_TAGNAME=	drm_v5.4.92_1
 
 .include <bsd.port.options.mk>
 
-.if ${OPSYS} == FreeBSD && ${OSVERSION} < 1300108
+.if ${OPSYS} == FreeBSD && ${OSVERSION} < 1400000
 IGNORE=		not supported on older CURRENT, no kernel support
 .endif
 .if ${OPSYS} != FreeBSD
@@ -50,23 +45,15 @@ IGNORE=		not supported on anything but FreeBSD (missing linuxkpi functionality)
 .if ${ARCH} == "amd64"
 PLIST_SUB+=	AMDGPU=""
 PLIST_SUB+=	I915=""
-PLIST_SUB+=	VMWGFX=""
-PLIST_SUB+=	VBOXVIDEO=""
 .elif ${ARCH} == "i386"
 PLIST_SUB+=	AMDGPU="@comment "
 PLIST_SUB+=	I915=""
-PLIST_SUB+=	VMWGFX=""
-PLIST_SUB+=	VBOXVIDEO=""
 .elif ${ARCH} == "aarch64" || ${ARCH:Mpowerpc*}
 PLIST_SUB+=	AMDGPU=""
 PLIST_SUB+=	I915="@comment "
-PLIST_SUB+=	VBOXVIDEO="@comment "
-PLIST_SUB+=	VMWGFX="@comment "
 .else
 PLIST_SUB+=	AMDGPU="@comment "
 PLIST_SUB+=	I915="@comment "
-PLIST_SUB+=	VBOXVIDEO="@comment "
-PLIST_SUB+=	VMWGFX="@comment "
 .endif
 
 KMODSRC=	${STAGEDIR}${PREFIX}/sys/modules/${PORTNAME}
