--- a/net/py-wsdd/Makefile
+++ b/net/py-wsdd/Makefile
@@ -3,6 +3,7 @@
 PORTNAME=	wsdd
 DISTVERSIONPREFIX=	v
 DISTVERSION=	0.6.2
+PORTREVISION=	1
 CATEGORIES=	net python
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
