--- a/x11-servers/xwayland-devel/Makefile
+++ b/x11-servers/xwayland-devel/Makefile
@@ -2,8 +2,8 @@
 
 PORTNAME=	xwayland
 DISTVERSIONPREFIX=	xorg-server-
-DISTVERSION=	1.20.0-844
-DISTVERSIONSUFFIX=	-gc9a3b14c1
+DISTVERSION=	1.20.0-870
+DISTVERSIONSUFFIX=	-g69e087caa
 CATEGORIES=	x11-servers
 PKGNAMESUFFIX=	-devel
 
