pfSense-pkg-Netgate_Coreboot_Upgrade: Rename
Rename it to pfSense-pkg-Netgate_Firmware_Upgrade since it will now
cover blinkboot upgrades as well on new hardware models

While here, remove gmake from explicit dependencies list and move it to
USES=gmake, also remove conditionals used for FreeBSD 10.x since we
don't support this version since pfSense 2.3.x

(cherry picked from commit aa871a404ea0b76f3b9c80674fb820f448abd5fb)

--- a/sysutils/pfSense-pkg-Netgate_Firmware_Upgrade/Makefile
+++ b/sysutils/pfSense-pkg-Netgate_Firmware_Upgrade/Makefile
@@ -1,20 +1,21 @@
 # $FreeBSD$
 
-PORTNAME=	pfSense-pkg-Netgate_Coreboot_Upgrade
+PORTNAME=	pfSense-pkg-Netgate_Firmware_Upgrade
 PORTVERSION=	0.29
 PORTREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 
 MAINTAINER=	coreteam@pfsense.org
-COMMENT=	pfSense package Netgate Coreboot Upgrade
+COMMENT=	pfSense package Netgate Firmware Upgrade
 
 LICENSE=	APACHE20
 
-BUILD_DEPENDS=	e2fsprogs-libuuid>=0:misc/e2fsprogs-libuuid \
-		gmake:devel/gmake
+BUILD_DEPENDS=	e2fsprogs-libuuid>=0:misc/e2fsprogs-libuuid
 RUN_DEPENDS=	flashrom>=1.1:sysutils/flashrom \
 		e2fsprogs-libuuid>=0:misc/e2fsprogs-libuuid
+
+USES=		gmake
 
 NO_MTREE=	yes
 USE_GITHUB=	nodefault
@@ -32,8 +33,7 @@ COREBOOT_PLCCB_ROM=ADI_PLCC-01.00.00.11.bin
 PLIST_SUB=	COREBOOT_DFF2_ROM=${COREBOOT_DFF2_ROM} \
 		COREBOOT_RCC_ROM=${COREBOOT_RCC_ROM} \
 		COREBOOT_RCCVE_ROM=${COREBOOT_RCCVE_ROM} \
-		COREBOOT_PLCCB_ROM=${COREBOOT_PLCCB_ROM} \
-		PLCC=${PLCC}
+		COREBOOT_PLCCB_ROM=${COREBOOT_PLCCB_ROM}
 
 SUB_FILES=	pkg-install pkg-deinstall
 SUB_LIST=	PORTNAME=${PORTNAME}
@@ -41,12 +41,6 @@ WRKSRC=		${WRKDIR}/${PORTNAME}
 CBFSTOOL_PATH=	${WRKSRC}/coreboot/util/cbfstool
 
 .include <bsd.port.options.mk>
-
-.if ${OSVERSION} >= 1100001
-PLCC=""
-.else
-PLCC="@comment "
-.endif
 
 pre-extract:
 	${MKDIR} ${WRKSRC}
@@ -63,14 +57,12 @@ do-build:
 		${FILESDIR}/adi_flash_util/adi_flash_util.c
 	${CC} ${CFLAGS} -o ${WRKSRC}/adi_powercycle \
 		${FILESDIR}/adi_powercycle/adi_powercycle.c
-.if ${OSVERSION} >= 1100001
 	${CC} ${CFLAGS} -o ${WRKSRC}/adi_smbios_util/adi_smbios_util -luuid \
 		-I${LOCALBASE}/include -L${LOCALBASE}/lib \
 		-include ${WRKSRC}/adi_smbios_util/config.h \
 		${WRKSRC}/adi_smbios_util/adi_smbios_util.c
 	${GMAKE} -C ${CBFSTOOL_PATH} HOSTCC=${CC} HOSTCXX=${CXX} \
 		VBOOT_SOURCE=${WRKSRC_vboot}
-.endif
 
 do-install:
 	${MKDIR} ${STAGEDIR}/etc/inc/priv
@@ -78,7 +70,7 @@ do-install:
 	${MKDIR} ${STAGEDIR}${PREFIX}/pkg
 	${MKDIR} ${STAGEDIR}${PREFIX}/sbin
 	${MKDIR} ${STAGEDIR}${PREFIX}/www
-	${INSTALL_DATA} ${FILESDIR}${PREFIX}/pkg/netgate_coreboot_upgrade.inc \
+	${INSTALL_DATA} ${FILESDIR}${PREFIX}/pkg/netgate_firmware_upgrade.inc \
 		${STAGEDIR}${PREFIX}/pkg
 	@${REINPLACE_CMD} -i '' \
 			-e "s|%%DATADIR%%|${DATADIR}|" \
@@ -86,12 +78,12 @@ do-install:
 			-e "s|%%COREBOOT_RCC_ROM%%|${COREBOOT_RCC_ROM}|" \
 			-e "s|%%COREBOOT_RCCVE_ROM%%|${COREBOOT_RCCVE_ROM}|" \
 			-e "s|%%COREBOOT_PLCCB_ROM%%|${COREBOOT_PLCCB_ROM}|" \
-		${STAGEDIR}${PREFIX}/pkg/netgate_coreboot_upgrade.inc
-	${INSTALL_DATA} ${FILESDIR}${PREFIX}/pkg/netgate_coreboot_upgrade.xml \
+		${STAGEDIR}${PREFIX}/pkg/netgate_firmware_upgrade.inc
+	${INSTALL_DATA} ${FILESDIR}${PREFIX}/pkg/netgate_firmware_upgrade.xml \
 		${STAGEDIR}${PREFIX}/pkg
-	${INSTALL_DATA} ${FILESDIR}${PREFIX}/www/netgate_coreboot_upgrade.php \
+	${INSTALL_DATA} ${FILESDIR}${PREFIX}/www/netgate_firmware_upgrade.php \
 		${STAGEDIR}${PREFIX}/www
-	${INSTALL_DATA} ${FILESDIR}/etc/inc/priv/netgate_coreboot_upgrade.priv.inc \
+	${INSTALL_DATA} ${FILESDIR}/etc/inc/priv/netgate_firmware_upgrade.priv.inc \
 		${STAGEDIR}/etc/inc/priv
 	${INSTALL_DATA} ${FILESDIR}${DATADIR}/info.xml \
 		${STAGEDIR}${DATADIR}
@@ -101,10 +93,8 @@ do-install:
 	${INSTALL_DATA} ${FILESDIR}/roms/*.bin ${STAGEDIR}${DATADIR}/roms
 	${INSTALL_PROGRAM} ${WRKSRC}/adi_flash_util ${STAGEDIR}${PREFIX}/sbin
 	${INSTALL_PROGRAM} ${WRKSRC}/adi_powercycle ${STAGEDIR}${PREFIX}/sbin
-.if ${OSVERSION} >= 1100001
 	${INSTALL_PROGRAM} ${WRKSRC}/adi_smbios_util/adi_smbios_util \
 		${STAGEDIR}${PREFIX}/sbin
 	${INSTALL_PROGRAM} ${CBFSTOOL_PATH}/cbfstool ${STAGEDIR}${PREFIX}/sbin
-.endif
 
 .include <bsd.port.mk>
