--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,8 +1,8 @@
 # $FreeBSD$
 
 PORTNAME=	mesa
-DISTVERSION=	21.0-branchpoint-2670
-DISTVERSIONSUFFIX=	-g24ce0862fe0
+DISTVERSION=	21.0-branchpoint-2806
+DISTVERSIONSUFFIX=	-gc22267262ee
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
