Add the support for the reset button on Netgate 6100.
Bump up the port version.

While here, mark this port as amd64 only.

--- a/sysutils/wrapalixresetbutton/Makefile
+++ b/sysutils/wrapalixresetbutton/Makefile
@@ -1,8 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	wrapalixresetbutton
-PORTVERSION=	0.0.7
-PORTREVISION=	1
+PORTVERSION=	0.0.8
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# none
@@ -18,9 +17,10 @@ PLIST_FILES=	sbin/wrapresetbtn \
 		sbin/RCC-VEresetbtn \
 		sbin/RCC-DFFresetbtn \
 		sbin/SG-5100resetbtn \
-		sbin/SG-5100led
+		sbin/SG-5100led \
+		sbin/6100resetbtn
 
-ONLY_FOR_ARCHS=	i386 amd64
+ONLY_FOR_ARCHS=	amd64
 
 do-extract:
 	${MKDIR} ${WRKSRC}
@@ -33,6 +33,7 @@ do-build:
 	${CC} ${CFLAGS} -lpthread -o ${WRKSRC}/RCC-VEresetbtn ${FILESDIR}/RCC-VE.c
 	${CC} ${CFLAGS} -lpthread -o ${WRKSRC}/SG-5100resetbtn ${FILESDIR}/sg5100resetbtn.c
 	${CC} ${CFLAGS} -lpthread -o ${WRKSRC}/SG-5100led ${FILESDIR}/sg5100led.c
+	${CC} ${CFLAGS} -lgpio -lpthread -o ${WRKSRC}/6100resetbtn ${FILESDIR}/6100resetbtn.c
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/wrapresetbtn ${STAGEDIR}${PREFIX}/sbin
@@ -43,5 +44,6 @@ do-install:
 	${LN} -sf RCC-VEresetbtn ${STAGEDIR}${PREFIX}/sbin/RCC-DFFresetbtn
 	${INSTALL_PROGRAM} ${WRKSRC}/SG-5100resetbtn ${STAGEDIR}${PREFIX}/sbin
 	${INSTALL_PROGRAM} ${WRKSRC}/SG-5100led ${STAGEDIR}${PREFIX}/sbin
+	${INSTALL_PROGRAM} ${WRKSRC}/6100resetbtn ${STAGEDIR}${PREFIX}/sbin
 
 .include <bsd.port.mk>
