--- a/x11/Makefile
+++ b/x11/Makefile
@@ -355,6 +355,7 @@
     SUBDIR += wdisplays
     SUBDIR += wdm
     SUBDIR += wev
+    SUBDIR += wezterm
     SUBDIR += wf-shell
     SUBDIR += wl-clipboard
     SUBDIR += wlogout
