Revert "Fix the build of security/wireguard-tools."
This reverts commit c25dd9acee160a6c1b1d59d3c18c733df54b7a1c.

--- a/security/wireguard-tools/Makefile
+++ b/security/wireguard-tools/Makefile
@@ -13,7 +13,7 @@ USES=		gmake
 
 WRKSRC?=	${WRKDIR}/${GL_PROJECT}-${GL_COMMIT}-${GL_COMMIT}/src
 
-PLIST_FILES=	bin/wg
+PLIST_FILES=	bin/wg bin/wg-quick
 
 USE_GITLAB=	yes
 GL_SITE=	https://gitlab.netgate.com
