Add py-filetype 1.0.7, python port from filetype Go package.
This new port is required for audio/py-eyed3 update.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4403,6 +4403,7 @@
     SUBDIR += py-filebytes
     SUBDIR += py-filedepot
     SUBDIR += py-filemagic
+    SUBDIR += py-filetype
     SUBDIR += py-first
     SUBDIR += py-five.globalrequest
     SUBDIR += py-fixtures
