devel/py-us: MAINTAINER should be me since I added the port

--- a/devel/py-us/Makefile
+++ b/devel/py-us/Makefile
@@ -6,7 +6,7 @@ CATEGORIES=	devel
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	sunpoet@FreeBSD.org
+MAINTAINER=	nc@FreeBSD.org
 COMMENT=	Easily work with US and state metadata
 
 LICENSE=	BSD3CLAUSE
