--- a/graphics/jpeg-xl/Makefile
+++ b/graphics/jpeg-xl/Makefile
@@ -2,7 +2,7 @@
 
 PORTNAME=	jpeg-xl
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.3.4
+DISTVERSION=	0.3.5
 CATEGORIES=	graphics
 
 MAINTAINER=	jbeich@FreeBSD.org
@@ -25,14 +25,14 @@ GH_TUPLE=	barmco:skcms:6437475:skcms/third_party/skcms \
 		webmproject:sjpeg:868ab55:sjpeg/third_party/sjpeg \
 		${NULL}
 GL_ACCOUNT=	wg1
-GL_COMMIT=	f2aeba7e3d091314eaccb64748791e1f4e2cf0a6
+GL_COMMIT=	f071e6c7d25984df04f4dc629646c3b0cca57de9
 CMAKE_ON=	JPEGXL_ENABLE_PLUGINS
 CMAKE_OFF=	JPEGXL_WARNINGS_AS_ERRORS ${BENCHMARK FUZZERS TCMALLOC:L:S/^/JPEGXL_ENABLE_/}
 CMAKE_OFF+=	${OpenGL GLUT:L:S/^/CMAKE_DISABLE_FIND_PACKAGE_/} # sjpeg
 LDFLAGS+=	-Wl,--as-needed # brotlicommon, GIMP/OPENEXR/PNG deps
 
-OPTIONS_DEFINE=	GIF GIMP JPEG OPENEXR PIXBUF PNG TEST
-OPTIONS_DEFAULT=GIF GIMP JPEG OPENEXR PIXBUF PNG
+OPTIONS_DEFINE=	GIF GIMP JPEG MANPAGES OPENEXR PIXBUF PNG TEST
+OPTIONS_DEFAULT=GIF GIMP JPEG MANPAGES OPENEXR PIXBUF PNG
 OPTIONS_SUB=	yes
 
 GIF_LIB_DEPENDS=	libgif.so:graphics/giflib
@@ -45,6 +45,10 @@ GIMP_LIB_DEPENDS=	libgegl-0.4.so:graphics/gegl \
 
 JPEG_USES=		jpeg
 JPEG_CMAKE_BOOL_OFF=	CMAKE_DISABLE_FIND_PACKAGE_JPEG
+
+MANPAGES_BUILD_DEPENDS=	a2x:textproc/asciidoc
+MANPAGES_USES=		python:build
+MANPAGES_CMAKE_BOOL_OFF=CMAKE_DISABLE_FIND_PACKAGE_Python
 
 OPENEXR_LIB_DEPENDS=	libHalf.so:graphics/ilmbase \
 			libIlmImf.so:graphics/openexr
