Re-add port: math/openmesh: Update 8.0 -> 8.1

--- a/math/Makefile
+++ b/math/Makefile
@@ -546,6 +546,7 @@
     SUBDIR += onednn
     SUBDIR += openblas
     SUBDIR += openlibm
+    SUBDIR += openmesh
     SUBDIR += opensolaris-libm
     SUBDIR += openturns
     SUBDIR += optpp
