textproc/py-chardet: pass maintainership to python
Last update (now reverted) broke many consumers in the tree,
so I feel it would be more responsible to pass this significant
port under python@ wing.

PR:		254536

--- a/textproc/py-chardet/Makefile
+++ b/textproc/py-chardet/Makefile
@@ -9,7 +9,7 @@ CATEGORIES=	textproc python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	rm@FreeBSD.org
+MAINTAINER=	python@FreeBSD.org
 COMMENT=	Universal encoding detector for Python 2 and 3
 
 LICENSE=	LGPL21
