Add wireguard packages

--- a/net/wireguard/Makefile
+++ b/net/wireguard/Makefile
@@ -1,32 +1,23 @@
 # $FreeBSD$
 
 PORTNAME=	wireguard
-PORTVERSION=	1.0.20200827
+PORTVERSION=	2
+PORTEPOCH=	1
 CATEGORIES=	net net-vpn
-MASTER_SITES=	https://git.zx2c4.com/wireguard-tools/snapshot/
-DISTNAME=	wireguard-tools-${PORTVERSION}
 
 MAINTAINER=	decke@FreeBSD.org
-COMMENT=	Fast, modern and secure VPN Tunnel
+COMMENT=	Meta-port for Wireguard
 
-LICENSE=	GPLv2
-LICENSE_FILE=	${WRKDIR}/${DISTNAME}/COPYING
+RUN_DEPENDS=	wg-quick:net/wireguard-tools
 
-RUN_DEPENDS=	bash:shells/bash \
-		wireguard-go:net/wireguard-go
+USES=	metaport
 
-USES=		gmake tar:xz
-USE_RC_SUBR=	${PORTNAME}
+.include <bsd.port.options.mk>
 
-WRKSRC=		${WRKDIR}/${DISTNAME}/src
-
-MAKE_ARGS=	WITH_WGQUICK=yes WITH_BASHCOMPLETION=yes
-MAKE_ENV+=	MANDIR="${MANPREFIX}/man" \
-		SYSCONFDIR="${PREFIX}/etc"
-
-post-patch:
-	@${REINPLACE_CMD} -e 's|/usr/local|${LOCALBASE}|g' \
-		${WRKSRC}/completion/wg-quick.bash-completion \
-		${WRKSRC}/wg-quick/freebsd.bash
+.if ${OSVERSION} < 1201000
+RUN_DEPENDS+=	wireguard-go:net/wireguard-go
+.else
+RUN_DEPENDS+=	${KMODDIR}/if_wg.ko:net/wireguard-kmod
+.endif
 
 .include <bsd.port.mk>
