--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -252,6 +252,7 @@
     SUBDIR += gu-aspell
     SUBDIR += gutenmark
     SUBDIR += gv-aspell
+    SUBDIR += halibut
     SUBDIR += heirloom-doctools
     SUBDIR += hevea
     SUBDIR += hhm
