--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,8 +1,8 @@
 # $FreeBSD$
 
 PORTNAME=	mesa
-DISTVERSION=	21.0-branchpoint-3531
-DISTVERSIONSUFFIX=	-gcb4287608a9
+DISTVERSION=	21.0-branchpoint-3716
+DISTVERSIONSUFFIX=	-gba8ddc0c683
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
@@ -119,7 +119,7 @@ VDPAU_MESON_ENABLED=	gallium-vdpau
 
 VULKAN_DESC=		Vulkan drivers and layers
 VULKAN_BUILD_DEPENDS=	glslangValidator:graphics/glslang
-VULKAN_MESON_TRUE=	vulkan-device-select-layer vulkan-overlay-layer
+VULKAN_MESON_ON=	-Dvulkan-layers=device-select,overlay
 anv_DESC=		Haswell and newer
 radv_DESC=		Southern Islands and newer
 
