devel/bitkeeper: register all dependencies
PR:		245793
Reported by:	Gian-Simon Purkert <gspurki@gmail.com>

--- a/devel/bitkeeper/Makefile
+++ b/devel/bitkeeper/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=	bitkeeper
 PORTVERSION=	7.3.3
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	devel
 MASTER_SITES=	https://www.bitkeeper.org/downloads/${PORTVERSION}/
 DISTNAME=	bk-${PORTVERSION}.src
@@ -20,16 +20,19 @@ BROKEN_FreeBSD_11=	perl: No such file or directory
 BUILD_DEPENDS=	${LOCALBASE}/bin/gperf:devel/gperf \
 		${LOCALBASE}/include/tommath.h:math/libtommath \
 		bash:shells/bash
-LIB_DEPENDS=    libtomcrypt.so:security/libtomcrypt \
+LIB_DEPENDS=	libtomcrypt.so:security/libtomcrypt \
 		libpcre.so:devel/pcre	\
-		liblz4.so:archivers/liblz4
+		liblz4.so:archivers/liblz4 \
+		libtommath.so:math/libtommath \
+		libfreetype.so:print/freetype2 \
+		libfontconfig.so:x11-fonts/fontconfig
 RUN_DEPENDS=	bash:shells/bash
 
 USES=		gmake groff bison localbase tk xorg iconv pkgconfig
-USE_XORG=       x11
+USE_XORG=	x11 xrender xft
 
-WRKSRC= ${WRKDIR}/bk-${PORTVERSION}/src
-ALL_TARGET= p
+WRKSRC=		${WRKDIR}/bk-${PORTVERSION}/src
+ALL_TARGET=	p
 
 do-build:
 	@(cd ${WRKSRC}; ${MAKE_CMD} ${ALL_TARGET})
