devel/bitkeeper: Manual port builds may stage incorrectly
Building through poudriere will always stage into
${PREFIX}/bitkeeper however when building manually using
make staging may not always work as expected.

--- a/devel/bitkeeper/Makefile
+++ b/devel/bitkeeper/Makefile
@@ -37,6 +37,10 @@ ALL_TARGET=	p
 do-build:
 	@(cd ${WRKSRC}; ${MAKE_CMD} ${ALL_TARGET})
 
+do-install:
+	@(cd ${WRKSRC}; \
+	${MAKE_CMD} DESTDIR=${STAGEDIR}${PREFIX}/bitkeeper ${INSTALL_TARGET})
+
 post-install:
 	${LN} -s ../bitkeeper/bk ${STAGEDIR}${PREFIX}/bin
 
