devel/bitkeeper: Use a shortcut script.
A shortcut script from UNIX Power Tools is a better idea.

Reported by:	tobik

--- a/devel/bitkeeper/Makefile
+++ b/devel/bitkeeper/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=	bitkeeper
 PORTVERSION=	7.3.3
-PORTREVISION=	4
+PORTREVISION=	5
 CATEGORIES=	devel
 MASTER_SITES=	https://www.bitkeeper.org/downloads/${PORTVERSION}/
 DISTNAME=	bk-${PORTVERSION}.src
@@ -31,6 +31,7 @@ RUN_DEPENDS=	bash:shells/bash
 USES=		gmake groff bison localbase tk xorg iconv pkgconfig
 USE_XORG=	x11 xrender xft
 
+SUB_FILES=	bk
 MANPREFIX=	${PREFIX}/bitkeeper
 WRKSRC=		${WRKDIR}/bk-${PORTVERSION}/src
 ALL_TARGET=	p
@@ -41,5 +42,6 @@ do-build:
 do-install:
 	@(cd ${WRKSRC}; \
 	${MAKE_CMD} DESTDIR=${STAGEDIR}${PREFIX}/bitkeeper ${INSTALL_TARGET}); \
+	${INSTALL_SCRIPT} ${WRKDIR}/bk ${STAGEDIR}${PREFIX}/bin
 
 .include <bsd.port.mk>
