--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4111,6 +4111,7 @@
     SUBDIR += py-azure-datalake-store
     SUBDIR += py-azure-functions-devops-build
     SUBDIR += py-azure-graphrbac
+    SUBDIR += py-azure-identity
     SUBDIR += py-azure-keyvault
     SUBDIR += py-azure-keyvault-administration
     SUBDIR += py-azure-loganalytics
