--- a/editors/poke/Makefile
+++ b/editors/poke/Makefile
@@ -27,7 +27,7 @@ INSTALL_TARGET=	install-strip
 
 INFO=		${PORTNAME}
 
-OPTIONS_DEFINE=	NLS
+OPTIONS_DEFINE=	EXAMPLES NLS
 OPTIONS_SUB=	yes
 
 NLS_USES=		gettext-runtime
