Re-add port textproc/py-orange3-text: Update 0.5.1 -> 1.3.1

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1339,6 +1339,7 @@
     SUBDIR += py-ocrmypdf
     SUBDIR += py-openpyxl
     SUBDIR += py-openstackdocstheme
+    SUBDIR += py-orange3-text
     SUBDIR += py-os-api-ref
     SUBDIR += py-packageurl-python
     SUBDIR += py-pager
