Add sysutils/sd-mux-ctrl, Tizen SD mux control program
The Tizen SD Mux is a SD card multiplexer: it electrically moves an SD
card between an SD reader and a device under test.

Details available at https://wiki.tizen.org/SD_MUX and
https://git.tizen.org/cgit/tools/testlab/sd-mux/

Thanks to Daniel Engberg and sbz for advice and updates.

Reviewed by:	sbz
Approved by:	sbz
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D29474

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1238,6 +1238,7 @@
     SUBDIR += screenie
     SUBDIR += scterc
     SUBDIR += sd-agent
+    SUBDIR += sd-mux-ctrl
     SUBDIR += sdparm
     SUBDIR += seatd
     SUBDIR += seatools
