--- a/www/squid3/Makefile
+++ b/www/squid3/Makefile
@@ -283,7 +283,7 @@ WITH_DEBUG?=		yes
 CONFIGURE_ARGS+=	${SQUID_CONFIGURE_ARGS}
 
 .if ${PORT_OPTIONS:MSSL} && ${OPSYS} == FreeBSD && ${OSVERSION} >= 1200085 && ${SSL_DEFAULT} == base
-BROKEN=		Does not build on FreeBSD 12 with OpenSSL 1.1. You may add DEFAULT_VERSIONS+=ssl=openssl to /etc/make.conf as a workaround
+BROKEN=		does not build with OpenSSL 1.1; you may add DEFAULT_VERSIONS+=ssl=libressl to /etc/make.conf as a workaround
 .endif
 
 post-patch:
