--- a/security/pfSense-pkg-openvpn-client-export/Makefile
+++ b/security/pfSense-pkg-openvpn-client-export/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	pfSense-pkg-openvpn-client-export
 PORTVERSION=	1.6
+PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -12,7 +13,7 @@ COMMENT=	pfSense package openvpn-client-export
 
 LICENSE=	APACHE20
 
-RUN_DEPENDS=	openvpn>=2.5.0:security/openvpn \
+RUN_DEPENDS=	openvpn>=2.5.2:security/openvpn \
 		openvpn-client-export>=2.5.2:security/openvpn-client-export \
 		zip>0:archivers/zip \
 		p7zip>0:archivers/p7zip
