--- a/sysutils/pfSense-pkg-Netgate_Firmware_Upgrade/Makefile
+++ b/sysutils/pfSense-pkg-Netgate_Firmware_Upgrade/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	pfSense-pkg-Netgate_Firmware_Upgrade
-PORTVERSION=	0.43
+PORTVERSION=	0.44
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 
@@ -28,12 +28,14 @@ COREBOOT_DFF2_ROM=ADI_DFF2-01.00.00.17-nodebug.rom
 COREBOOT_RCC_ROM=ADI_RCC-01.00.00.18-nodebug-16m.rom
 COREBOOT_RCCVE_ROM=ADI_RCCVE-01.00.00.17-nodebug.rom
 COREBOOT_PLCCB_ROM=ADI_PLCC-01.00.00.11.bin
+BLINKBOOT_NETGATE_4100=CORDOBA-02.01.00.05-2Ct-uc-14.fd
 BLINKBOOT_NETGATE_6100=CORDOBA-02.01.00.05t-uc-14.fd
 
 PLIST_SUB=	COREBOOT_DFF2_ROM=${COREBOOT_DFF2_ROM} \
 		COREBOOT_RCC_ROM=${COREBOOT_RCC_ROM} \
 		COREBOOT_RCCVE_ROM=${COREBOOT_RCCVE_ROM} \
 		COREBOOT_PLCCB_ROM=${COREBOOT_PLCCB_ROM} \
+		BLINKBOOT_NETGATE_4100=${BLINKBOOT_NETGATE_4100} \
 		BLINKBOOT_NETGATE_6100=${BLINKBOOT_NETGATE_6100}
 
 SUB_FILES=	pkg-install pkg-deinstall
@@ -80,6 +82,7 @@ do-install:
 			-e "s|%%COREBOOT_RCC_ROM%%|${COREBOOT_RCC_ROM}|" \
 			-e "s|%%COREBOOT_RCCVE_ROM%%|${COREBOOT_RCCVE_ROM}|" \
 			-e "s|%%COREBOOT_PLCCB_ROM%%|${COREBOOT_PLCCB_ROM}|" \
+			-e "s|%%BLINKBOOT_NETGATE_4100%%|${BLINKBOOT_NETGATE_4100}|" \
 			-e "s|%%BLINKBOOT_NETGATE_6100%%|${BLINKBOOT_NETGATE_6100}|" \
 		${STAGEDIR}${PREFIX}/pkg/netgate_firmware_upgrade.inc
 	${INSTALL_DATA} ${FILESDIR}${PREFIX}/pkg/netgate_firmware_upgrade.xml \
